--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-starter",
+  "name": "uigarage-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link-http": "^1.5.17",
+    "express": "^4.17.1",
+    "graphql": "^15.1.0",
+    "graphql-tag": "^2.10.3",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
+    "react-dom": "16.13.1",
+    "react-router-dom": "^5.2.0",
+    "sass": "^1.26.8"
   }
 }
