--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "graphql-tag": "^2.10.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0",
-    "sass": "^1.26.8"
-  }
+    "sass": "^1.26.8",
+    "tailwindcss": "^1.4.6"
+  },
+  "devDependencies": {}
 }
