--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
     "isomorphic-unfetch": "^3.0.0",
+    "moment": "^2.27.0",
     "next": "9.3.5",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
+    "react-lazy-load-image-component": "^1.5.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "sass": "^1.26.8",
     "tailwindcss": "^1.4.6"
