--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-lazy-load-image-component": "^1.5.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0",
     "sass": "^1.26.8",
     "tailwindcss": "^1.4.6"
   },
