--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "16.13.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-loading": "^2.0.3",
+    "react-masonry-css": "^1.0.14",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "sass": "^1.26.8",
